// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollPaddingLeft renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: 0;
  -moz-scroll-padding-left: 0;
  -ms-scroll-padding-left: 0;
  scroll-padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: 0;
  -moz-scroll-padding-left: 0;
  -ms-scroll-padding-left: 0;
  scroll-padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: 0;
  -moz-scroll-padding-left: 0;
  -ms-scroll-padding-left: 0;
  scroll-padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: 0;
  -moz-scroll-padding-left: 0;
  -ms-scroll-padding-left: 0;
  scroll-padding-left: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: hasnot;
  -moz-scroll-padding-left: hasnot;
  -ms-scroll-padding-left: hasnot;
  scroll-padding-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: has;
  -moz-scroll-padding-left: has;
  -ms-scroll-padding-left: has;
  scroll-padding-left: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: hasnot;
  -moz-scroll-padding-left: hasnot;
  -ms-scroll-padding-left: hasnot;
  scroll-padding-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: has;
  -moz-scroll-padding-left: has;
  -ms-scroll-padding-left: has;
  scroll-padding-left: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: invalid.path.1;
  -moz-scroll-padding-left: invalid.path.1;
  -ms-scroll-padding-left: invalid.path.1;
  scroll-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: invalid.path.1;
  -moz-scroll-padding-left: invalid.path.1;
  -ms-scroll-padding-left: invalid.path.1;
  scroll-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: invalid.path.1;
  -moz-scroll-padding-left: invalid.path.1;
  -ms-scroll-padding-left: invalid.path.1;
  scroll-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: invalid.path.1;
  -moz-scroll-padding-left: invalid.path.1;
  -ms-scroll-padding-left: invalid.path.1;
  scroll-padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: -54881px;
  -moz-scroll-padding-left: -54881px;
  -ms-scroll-padding-left: -54881px;
  scroll-padding-left: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: -54881px;
  -moz-scroll-padding-left: -54881px;
  -ms-scroll-padding-left: -54881px;
  scroll-padding-left: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: -42365px;
  -moz-scroll-padding-left: -42365px;
  -ms-scroll-padding-left: -42365px;
  scroll-padding-left: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: -42365px;
  -moz-scroll-padding-left: -42365px;
  -ms-scroll-padding-left: -42365px;
  scroll-padding-left: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: July;
  -moz-scroll-padding-left: July;
  -ms-scroll-padding-left: July;
  scroll-padding-left: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: July;
  -moz-scroll-padding-left: July;
  -ms-scroll-padding-left: July;
  scroll-padding-left: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: January;
  -moz-scroll-padding-left: January;
  -ms-scroll-padding-left: January;
  scroll-padding-left: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: December;
    -moz-scroll-padding-left: December;
    -ms-scroll-padding-left: December;
    scroll-padding-left: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: June;
    -moz-scroll-padding-left: June;
    -ms-scroll-padding-left: June;
    scroll-padding-left: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: January;
  -moz-scroll-padding-left: January;
  -ms-scroll-padding-left: January;
  scroll-padding-left: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: December;
    -moz-scroll-padding-left: December;
    -ms-scroll-padding-left: December;
    scroll-padding-left: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: June;
    -moz-scroll-padding-left: June;
    -ms-scroll-padding-left: June;
    scroll-padding-left: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: July;
    -moz-scroll-padding-left: July;
    -ms-scroll-padding-left: July;
    scroll-padding-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: July;
    -moz-scroll-padding-left: July;
    -ms-scroll-padding-left: July;
    scroll-padding-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: June;
    -moz-scroll-padding-left: June;
    -ms-scroll-padding-left: June;
    scroll-padding-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: June;
    -moz-scroll-padding-left: June;
    -ms-scroll-padding-left: June;
    scroll-padding-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: July;
  -moz-scroll-padding-left: July;
  -ms-scroll-padding-left: July;
  scroll-padding-left: July;
}

@media May {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: July;
  -moz-scroll-padding-left: July;
  -ms-scroll-padding-left: July;
  scroll-padding-left: July;
}

@media May {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: April;
  -moz-scroll-padding-left: April;
  -ms-scroll-padding-left: April;
  scroll-padding-left: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: January;
    -moz-scroll-padding-left: January;
    -ms-scroll-padding-left: January;
    scroll-padding-left: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: December;
    -moz-scroll-padding-left: December;
    -ms-scroll-padding-left: December;
    scroll-padding-left: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: April;
  -moz-scroll-padding-left: April;
  -ms-scroll-padding-left: April;
  scroll-padding-left: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: January;
    -moz-scroll-padding-left: January;
    -ms-scroll-padding-left: January;
    scroll-padding-left: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: December;
    -moz-scroll-padding-left: December;
    -ms-scroll-padding-left: December;
    scroll-padding-left: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-padding-left: July;
    -moz-scroll-padding-left: July;
    -ms-scroll-padding-left: July;
    scroll-padding-left: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-padding-left: July;
    -moz-scroll-padding-left: July;
    -ms-scroll-padding-left: July;
    scroll-padding-left: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: September;
    -moz-scroll-padding-left: September;
    -ms-scroll-padding-left: September;
    scroll-padding-left: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: November;
    -moz-scroll-padding-left: November;
    -ms-scroll-padding-left: November;
    scroll-padding-left: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: August;
    -moz-scroll-padding-left: August;
    -ms-scroll-padding-left: August;
    scroll-padding-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-left: January;
    -moz-scroll-padding-left: January;
    -ms-scroll-padding-left: January;
    scroll-padding-left: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: December;
    -moz-scroll-padding-left: December;
    -ms-scroll-padding-left: December;
    scroll-padding-left: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: June;
    -moz-scroll-padding-left: June;
    -ms-scroll-padding-left: June;
    scroll-padding-left: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-left: January;
    -moz-scroll-padding-left: January;
    -ms-scroll-padding-left: January;
    scroll-padding-left: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: December;
    -moz-scroll-padding-left: December;
    -ms-scroll-padding-left: December;
    scroll-padding-left: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-left: April;
    -moz-scroll-padding-left: April;
    -ms-scroll-padding-left: April;
    scroll-padding-left: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-left: May;
    -moz-scroll-padding-left: May;
    -ms-scroll-padding-left: May;
    scroll-padding-left: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-left: June;
    -moz-scroll-padding-left: June;
    -ms-scroll-padding-left: June;
    scroll-padding-left: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: 54881px;
  -moz-scroll-padding-left: 54881px;
  -ms-scroll-padding-left: 54881px;
  scroll-padding-left: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: 54881px;
  -moz-scroll-padding-left: 54881px;
  -ms-scroll-padding-left: 54881px;
  scroll-padding-left: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: 42365px;
  -moz-scroll-padding-left: 42365px;
  -ms-scroll-padding-left: 42365px;
  scroll-padding-left: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: 42365px;
  -moz-scroll-padding-left: 42365px;
  -ms-scroll-padding-left: 42365px;
  scroll-padding-left: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: July;
  -moz-scroll-padding-left: July;
  -ms-scroll-padding-left: July;
  scroll-padding-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: July;
  -moz-scroll-padding-left: July;
  -ms-scroll-padding-left: July;
  scroll-padding-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: June;
  -moz-scroll-padding-left: June;
  -ms-scroll-padding-left: June;
  scroll-padding-left: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: June;
  -moz-scroll-padding-left: June;
  -ms-scroll-padding-left: June;
  scroll-padding-left: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingLeft renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`scrollPaddingLeft renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-left: DarkSlateBlue;
  -moz-scroll-padding-left: DarkSlateBlue;
  -ms-scroll-padding-left: DarkSlateBlue;
  scroll-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: DarkSlateBlue;
  -moz-scroll-padding-left: DarkSlateBlue;
  -ms-scroll-padding-left: DarkSlateBlue;
  scroll-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: DarkSlateBlue;
  -moz-scroll-padding-left: DarkSlateBlue;
  -ms-scroll-padding-left: DarkSlateBlue;
  scroll-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-left: DarkSlateBlue;
  -moz-scroll-padding-left: DarkSlateBlue;
  -ms-scroll-padding-left: DarkSlateBlue;
  scroll-padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
